Agentforce/force-app/main/default/objects/Case/fields/Absence_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Absence_Start_Date__c</fullName>
    <label>Absence Start Date</label>
    <type>Date</type>
</CustomField>