Agentforce/force-app/main/default/objects/Case/fields/AccountCaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>AccountCaseSafeID__c</fullName>
    <formula>Account.AccountCaseSafeID__c</formula>
    <label>AccountCaseSafeID</label>
    <type>Text</type>
</CustomField>