Agentforce/force-app/main/default/objects/Case/fields/Case_Age__c.field-meta.xml
<CustomField>
    <fullName>Case_Age__c</fullName>
    <formula>IF (  IsClosed = FALSE,NOW() -  CreatedDate , ClosedDate - CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>