Agentforce/force-app/main/default/objects/Case/fields/Case_CaseSafeId__c.field-meta.xml
<CustomField>
    <fullName>Case_CaseSafeId__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case CaseSafeId</label>
    <type>Text</type>
</CustomField>