Agentforce/force-app/main/default/objects/Case/fields/Case_Duration__c.field-meta.xml
<CustomField>
    <fullName>Case_Duration__c</fullName>
    <formula>If( ISPICKVAL( Status ,&quot;Open&quot;), today() -  Created_Date__c , Closed_Date__c -  Created_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>