Agentforce/force-app/main/default/objects/Case/fields/Case_Manager_CaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>Case_Manager_CaseSafeID__c</fullName>
    <description>CaseSafeID of the Case Manager</description>
    <formula>CASESAFEID( Case_Manager_Lookup__r.Id )</formula>
    <label>Case Manager CaseSafeID</label>
    <type>Text</type>
</CustomField>