Agentforce/force-app/main/default/objects/Case/fields/Case_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Case_Manager_Email__c</fullName>
    <label>Case Manager Email</label>
    <type>Email</type>
</CustomField>