Agentforce/force-app/main/default/objects/Case/fields/Case_Manager_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Case_Manager_Lookup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Case Manager</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Case Manager cannot be the same as Employee</errorMessage>
        <filterItems>
            <field>Employee__c.Id</field>
            <operation>notEqual</operation>
            <valueField>$Source.Employee_Lookup__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Cases (Case Manager)</relationshipLabel>
    <relationshipName>Cases_Case_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>