Agentforce/force-app/main/default/objects/Case/fields/Case_Manager_Lookup_Email__c.field-meta.xml
<CustomField>
    <fullName>Case_Manager_Lookup_Email__c</fullName>
    <description>Displays the Case Manager Email Address where a Case Manager is assigned via lookup</description>
    <formula>Case_Manager_Lookup__r.Email_Address__c</formula>
    <label>Case Manager Lookup Email</label>
    <type>Text</type>
</CustomField>