Agentforce/force-app/main/default/objects/Case/fields/Case_Manager_Name_Mis_Match__c.field-meta.xml
<CustomField>
    <fullName>Case_Manager_Name_Mis_Match__c</fullName>
    <description>Identifies where Case Manager Name and Case Manager Lookup are not matched</description>
    <formula>AND(
    NOT(ISBLANK(Case_Manager_Lookup__r.Name)),
    NOT(ISBLANK(Case_Manager__c)),
    Case_Manager_Lookup__r.Name &lt;&gt; Case_Manager__c
)</formula>
    <label>Case Manager Name Mis-Match</label>
    <type>Checkbox</type>
</CustomField>