Agentforce/force-app/main/default/objects/Case/fields/Case_Owner_Active__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Active__c</fullName>
    <formula>Owner:User.IsActive</formula>
    <label>Case Owner Active</label>
    <type>Checkbox</type>
</CustomField>