Agentforce/force-app/main/default/objects/Case/fields/Client_Comments__c.field-meta.xml
<CustomField>
    <fullName>Client_Comments__c</fullName>
    <label>Client Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>