Agentforce/force-app/main/default/objects/Case/fields/Cost_of_Change__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Change__c</fullName>
    <label>Cost of Change</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>