Agentforce/force-app/main/default/objects/Case/fields/Count_of_Appeals__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Appeals__c</fullName>
    <label># Appeals</label>
    <summaryForeignKey>Appeal__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>