Agentforce/force-app/main/default/objects/Case/fields/Count_of_Next_Actions__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Next_Actions__c</fullName>
    <description>Number of Next Actions associated to the Case</description>
    <label># Next Actions</label>
    <summaryForeignKey>Next_Action__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>