Agentforce/force-app/main/default/objects/Case/fields/Count_of_Occupational_Health_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Occupational_Health_Referrals__c</fullName>
    <label># Occupational Health Referrals</label>
    <summaryForeignKey>Occupational_Health_Referral__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>