Agentforce/force-app/main/default/objects/Case/fields/Count_of_Welfare_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Welfare_Meetings__c</fullName>
    <label># Welfare Meetings</label>
    <summaryForeignKey>Welfare_Meeting__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>