Agentforce/force-app/main/default/objects/Case/fields/Date_of_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Transfer__c</fullName>
    <description>Date of TUPE Transfer</description>
    <label>Date of Transfer</label>
    <type>Date</type>
</CustomField>