Agentforce/force-app/main/default/objects/Case/fields/Days_After_Closure_Appeal_Received__c.field-meta.xml
<CustomField>
    <fullName>Days_After_Closure_Appeal_Received__c</fullName>
    <formula>IF(
				AND(
								Latest_Appeal_Received__c != NULL,
								Initial_Closure_Date__c != NULL,
								Latest_Appeal_Received__c &gt;= Initial_Closure_Date__c
								),
				Latest_Appeal_Received__c - Initial_Closure_Date__c,
				NULL
				)</formula>
    <label>Days After Closure Appeal Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>