Agentforce/force-app/main/default/objects/Case/fields/Days_Since_Closure__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Closure__c</fullName>
    <description>Days since Initial Case Closure. Used in logic to allow/disallow Appeal creation.</description>
    <formula>IF(ISBLANK(Initial_Closure_Date__c ),0,TODAY() - Initial_Closure_Date__c )</formula>
    <label>Days Since Closure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>