Agentforce/force-app/main/default/objects/Case/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>