Agentforce/force-app/main/default/objects/Case/fields/Employee_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Employee_Lookup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Cases (Employee)</relationshipLabel>
    <relationshipName>Cases_Employee</relationshipName>
    <type>Lookup</type>
</CustomField>