Agentforce/force-app/main/default/objects/Case/fields/Employee_Payroll_No__c.field-meta.xml
<CustomField>
    <fullName>Employee_Payroll_No__c</fullName>
    <label>Employee Payroll No</label>
    <length>25</length>
    <type>Text</type>
</CustomField>