Agentforce/force-app/main/default/objects/Case/fields/Employee_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Employee_Start_Date__c</fullName>
    <label>Employee Start Date</label>
    <type>Date</type>
</CustomField>