Agentforce/force-app/main/default/objects/Case/fields/HR_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>HR_Contact_Email__c</fullName>
    <description>Email Address for HR Contact</description>
    <label>HR Contact Email</label>
    <type>Email</type>
</CustomField>