Agentforce/force-app/main/default/objects/Case/fields/Initial_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Initial_Assignment__c</fullName>
    <inlineHelpText>Records the Date and Time of the first time this Case was assigned to a User (not a Queue).</inlineHelpText>
    <label>Initial Assignment</label>
    <type>DateTime</type>
</CustomField>