Agentforce/force-app/main/default/objects/Case/fields/Initial_Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Closure_Date__c</fullName>
    <description>The date the Case was initially Closed. Stamped by Flow. Used in logic to allow/disallow Appeal record creation.</description>
    <label>Initial Closure Date</label>
    <type>Date</type>
</CustomField>