Agentforce/force-app/main/default/objects/Case/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AIP</fullName>
                <color>#FFFFFF</color>
                <isActive>false</isActive>
                <label>AIP</label>
            </value>
            <value>
                <fullName>Appeal</fullName>
            </value>
            <value>
                <fullName>Appeal - Disciplinary</fullName>
                <isActive>false</isActive>
                <label>Appeal - Disciplinary</label>
            </value>
            <value>
                <fullName>Appeal - Grievance</fullName>
                <isActive>false</isActive>
                <label>Appeal - Grievance</label>
            </value>
            <value>
                <fullName>Appeal - Redundancy</fullName>
                <isActive>false</isActive>
                <label>Appeal - Redundancy</label>
            </value>
            <value>
                <fullName>Appeals against process</fullName>
                <isActive>false</isActive>
                <label>Appeals against process</label>
            </value>
            <value>
                <fullName>Appeal - SOSR TTP</fullName>
                <isActive>false</isActive>
                <label>Appeal - SOSR TTP</label>
            </value>
            <value>
                <fullName>AWOL</fullName>
                <color>#FFFFFF</color>
                <label>AWOL</label>
            </value>
            <value>
                <fullName>Career breaks/sabbaticals</fullName>
                <isActive>false</isActive>
                <label>Career breaks/sabbaticals</label>
            </value>
            <value>
                <fullName>Change to Ts &amp; Cs</fullName>
                <color>#FFFFFF</color>
                <isActive>false</isActive>
                <label>Change to Ts &amp; Cs</label>
            </value>
            <value>
                <fullName>Consultations</fullName>
                <isActive>false</isActive>
                <label>Consultations</label>
            </value>
            <value>
                <fullName>Contract Variation/Restructure</fullName>
                <color>#FFFFFF</color>
                <isActive>false</isActive>
                <label>Contract Variation/Restructure</label>
            </value>
            <value>
                <fullName>Contract Variation / Restructure</fullName>
                <color>#FFFFFF</color>
                <label>Contract Variation / Restructure</label>
            </value>
            <value>
                <fullName>Disciplinary</fullName>
                <color>#FFFFFF</color>
                <label>Disciplinary</label>
            </value>
            <value>
                <fullName>Early Conciliation</fullName>
            </value>
            <value>
                <fullName>EU Separation</fullName>
                <isActive>false</isActive>
                <label>EU Separation</label>
            </value>
            <value>
                <fullName>Flexible Working</fullName>
                <color>#FFFFFF</color>
                <label>Flexible Working</label>
            </value>
            <value>
                <fullName>Frustration of Contract</fullName>
                <color>#FFFFFF</color>
                <label>Frustration of Contract</label>
            </value>
            <value>
                <fullName>Grievance</fullName>
                <color>#FFFFFF</color>
                <label>Grievance</label>
            </value>
            <value>
                <fullName>Ill Health Capability</fullName>
                <color>#FFFFFF</color>
                <label>Ill Health Capability</label>
            </value>
            <value>
                <fullName>Investigations</fullName>
                <isActive>false</isActive>
                <label>Investigations</label>
            </value>
            <value>
                <fullName>Long Term Sick</fullName>
                <color>#FFFFFF</color>
                <label>Long Term Sick</label>
            </value>
            <value>
                <fullName>Maternity / Paternity</fullName>
                <isActive>false</isActive>
                <label>Maternity / Paternity</label>
            </value>
            <value>
                <fullName>Mediation</fullName>
            </value>
            <value>
                <fullName>Medical Capability</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Other Reason for Absence</fullName>
                <color>#FFFFFF</color>
                <isActive>false</isActive>
                <label>Other Reason for Absence</label>
            </value>
            <value>
                <fullName>Performance</fullName>
                <color>#FFFFFF</color>
                <label>Performance</label>
            </value>
            <value>
                <fullName>Probation</fullName>
                <color>#FFFFFF</color>
                <label>Probation</label>
            </value>
            <value>
                <fullName>Redundancy</fullName>
                <color>#FFFFFF</color>
                <label>Redundancy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>