Agentforce/force-app/main/default/objects/Case/fields/Issue_Type_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type_Sub_Category__c</fullName>
    <label>Issue Type Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Issue_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Absence reporting</fullName>
                <color>#FFFFFF</color>
                <label>Absence reporting</label>
            </value>
            <value>
                <fullName>Accessory</fullName>
                <color>#FFFFFF</color>
                <label>Accessory</label>
            </value>
            <value>
                <fullName>Accessory to a Disciplinary Offence</fullName>
            </value>
            <value>
                <fullName>Accident at Work</fullName>
                <color>#FFFFFF</color>
                <label>Accident at Work</label>
            </value>
            <value>
                <fullName>Accident Outside of Work</fullName>
                <color>#FFFFFF</color>
                <label>Accident Outside of Work</label>
            </value>
            <value>
                <fullName>Addiction</fullName>
                <color>#FFFFFF</color>
                <label>Addiction</label>
            </value>
            <value>
                <fullName>Adverse Weather</fullName>
                <color>#FFFFFF</color>
                <label>Adverse Weather</label>
            </value>
            <value>
                <fullName>Allergies, Poisoning</fullName>
                <color>#FFFFFF</color>
                <label>Allergies, Poisoning</label>
            </value>
            <value>
                <fullName>Anaemia</fullName>
                <color>#FFFFFF</color>
                <label>Anaemia</label>
            </value>
            <value>
                <fullName>Annual leave</fullName>
                <color>#FFFFFF</color>
                <label>Annual leave</label>
            </value>
            <value>
                <fullName>Arthritis</fullName>
                <color>#FFFFFF</color>
                <label>Arthritis</label>
            </value>
            <value>
                <fullName>Asthma</fullName>
                <color>#FFFFFF</color>
                <label>Asthma</label>
            </value>
            <value>
                <fullName>Authorised and permitted (management use only)</fullName>
                <color>#FFFFFF</color>
                <label>Authorised and permitted (management use only)</label>
            </value>
            <value>
                <fullName>Authorised Leave</fullName>
                <color>#FFFFFF</color>
                <label>Authorised Leave</label>
            </value>
            <value>
                <fullName>Back, Neck, Spinal Disorder</fullName>
                <color>#FFFFFF</color>
                <label>Back, Neck, Spinal Disorder</label>
            </value>
            <value>
                <fullName>Back &amp; neck problems</fullName>
                <color>#FFFFFF</color>
                <label>Back &amp; neck problems</label>
            </value>
            <value>
                <fullName>Bereavement/Compassionate</fullName>
                <color>#FFFFFF</color>
                <label>Bereavement/Compassionate</label>
            </value>
            <value>
                <fullName>Birthday Time Off</fullName>
                <color>#FFFFFF</color>
                <label>Birthday Time Off</label>
            </value>
            <value>
                <fullName>Blood Disorder</fullName>
                <color>#FFFFFF</color>
                <label>Blood Disorder</label>
            </value>
            <value>
                <fullName>Breach of Code of Conduct</fullName>
            </value>
            <value>
                <fullName>Breach of Company Policy</fullName>
                <color>#FFFFFF</color>
                <label>Breach of Company Policy</label>
            </value>
            <value>
                <fullName>Breach of Confidentiality</fullName>
                <color>#FFFFFF</color>
                <label>Breach of Confidentiality</label>
            </value>
            <value>
                <fullName>Breach of Dress Code</fullName>
                <color>#FFFFFF</color>
                <label>Breach of Dress Code</label>
            </value>
            <value>
                <fullName>Breach of GDPR/Data Protection</fullName>
                <color>#FFFFFF</color>
                <label>Breach of GDPR/Data Protection</label>
            </value>
            <value>
                <fullName>Breach of GDPR/InfoSec</fullName>
            </value>
            <value>
                <fullName>Breach of H&amp;S</fullName>
            </value>
            <value>
                <fullName>Breach of Security Policy</fullName>
            </value>
            <value>
                <fullName>Breach of Security Protocols</fullName>
                <color>#FFFFFF</color>
                <label>Breach of Security Protocols</label>
            </value>
            <value>
                <fullName>Breach of Social Media Policy</fullName>
                <color>#FFFFFF</color>
                <label>Breach of Social Media Policy</label>
            </value>
            <value>
                <fullName>Breach of Trust &amp; Confidence</fullName>
                <color>#FFFFFF</color>
                <label>Breach of Trust &amp; Confidence</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>