Agentforce/force-app/main/default/objects/Case/fields/Latest_Appeal_Received__c.field-meta.xml
<CustomField>
    <fullName>Latest_Appeal_Received__c</fullName>
    <description>Populated by DLRS. Holds the date the Latest Appeal was received.</description>
    <label>Latest Appeal Received</label>
    <type>Date</type>
</CustomField>