Agentforce/force-app/main/default/objects/Case/fields/Latest_Welfare_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Latest_Welfare_Meeting__c</fullName>
    <label>Latest Welfare Meeting</label>
    <summarizedField>Welfare_Meeting__c.Date_Time__c</summarizedField>
    <summaryForeignKey>Welfare_Meeting__c.Case__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>