Agentforce/force-app/main/default/objects/Case/fields/Legacy_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Case_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Legacy Case Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>