Agentforce/force-app/main/default/objects/Case/fields/Legacy_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Outcome__c</fullName>
    <label>Legacy Outcome</label>
    <type>TextArea</type>
</CustomField>