Agentforce/force-app/main/default/objects/Case/fields/LegacyCaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>LegacyCaseSafeID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Provides legacy CaseSafeID related to the original Case record</description>
    <externalId>true</externalId>
    <label>LegacyCaseSafeID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>