Agentforce/force-app/main/default/objects/Case/fields/Line_Manager__c.field-meta.xml
<CustomField>
    <fullName>Line_Manager__c</fullName>
    <label>Line Manager</label>
    <length>200</length>
    <type>Text</type>
</CustomField>