Agentforce/force-app/main/default/objects/Case/fields/Medical_Capability_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Medical_Capability_Start_Date__c</fullName>
    <label>Medical Capability Start Date</label>
    <type>Date</type>
</CustomField>