Agentforce/force-app/main/default/objects/Case/fields/Most_Recent_Case_Comment__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Case_Comment__c</fullName>
    <description>Text box with the most recent case comment.</description>
    <label>Most Recent Case Comment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>