Agentforce/force-app/main/default/objects/Case/fields/Most_Recent_Case_Comment_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Case_Comment_Date_Time__c</fullName>
    <description>Date &amp; Time of the most recent case comment.</description>
    <label>Most Recent Case Comment Date/Time</label>
    <type>DateTime</type>
</CustomField>