Agentforce/force-app/main/default/objects/Case/fields/Next_Action__c.field-meta.xml
<CustomField>
    <fullName>Next_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Action</label>
    <referenceTo>Next_Action__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>