Agentforce/force-app/main/default/objects/Case/fields/Next_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Action_Date__c</fullName>
    <formula>Next_Action__r.Next_Action_Date__c</formula>
    <label>Next Action Date</label>
    <type>Date</type>
</CustomField>