Agentforce/force-app/main/default/objects/Case/fields/Number_of_TUPE_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_TUPE_Employees__c</fullName>
    <description>Number of Employees in the TUPE</description>
    <label># Employees</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>