Agentforce/force-app/main/default/objects/Case/fields/Occupational_Health_Referral_Exists__c.field-meta.xml
<CustomField>
    <fullName>Occupational_Health_Referral_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE where an associated Occupational Health Referral record exists</description>
    <label>Occupational Health Referral</label>
    <type>Checkbox</type>
</CustomField>