Agentforce/force-app/main/default/objects/Case/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Issue_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
                <color>#FFFFFF</color>
                <label>Accepted</label>
            </value>
            <value>
                <fullName>Agreement to Change to T&amp;Cs</fullName>
            </value>
            <value>
                <fullName>Alternative agreed</fullName>
                <color>#FFFFFF</color>
                <label>Alternative agreed</label>
            </value>
            <value>
                <fullName>Alternative Proposal Agreed</fullName>
            </value>
            <value>
                <fullName>Colleague TUPE Transferred</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
                <color>#FFFFFF</color>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Contract Extended</fullName>
                <color>#FFFFFF</color>
                <label>Contract Extended</label>
            </value>
            <value>
                <fullName>Contract Terminated</fullName>
            </value>
            <value>
                <fullName>Contract Variation</fullName>
            </value>
            <value>
                <fullName>COT3</fullName>
            </value>
            <value>
                <fullName>Death in service</fullName>
                <color>#FFFFFF</color>
                <label>Death in service</label>
            </value>
            <value>
                <fullName>Demotion</fullName>
            </value>
            <value>
                <fullName>Demotion/Redeployment</fullName>
                <color>#FFFFFF</color>
                <label>Demotion/Redeployment</label>
            </value>
            <value>
                <fullName>Dismissal</fullName>
                <color>#FFFFFF</color>
                <label>Dismissal</label>
            </value>
            <value>
                <fullName>Dismissal &amp; Reingagement</fullName>
            </value>
            <value>
                <fullName>Dismissal and reengagement (with notice)</fullName>
                <color>#FFFFFF</color>
                <label>Dismissal and reengagement (with notice)</label>
            </value>
            <value>
                <fullName>Dismissal with notice</fullName>
                <color>#FFFFFF</color>
                <label>Dismissal with notice</label>
            </value>
            <value>
                <fullName>Dismissal without Notice (Summary)</fullName>
                <color>#FFFFFF</color>
                <label>Dismissal without Notice (Summary)</label>
            </value>
            <value>
                <fullName>Documents Provided, No Further Action</fullName>
            </value>
            <value>
                <fullName>Documents Provided - No Further Action</fullName>
                <color>#FFFFFF</color>
                <label>Documents Provided - No Further Action</label>
            </value>
            <value>
                <fullName>Extended</fullName>
                <color>#FFFFFF</color>
                <label>Extended</label>
            </value>
            <value>
                <fullName>Final Written Warning</fullName>
                <color>#FFFFFF</color>
                <label>Final Written Warning</label>
            </value>
            <value>
                <fullName>First Written Warning</fullName>
                <color>#FFFFFF</color>
                <label>First Written Warning</label>
            </value>
            <value>
                <fullName>Forced Changed to T&amp;C&apos;s</fullName>
            </value>
            <value>
                <fullName>Informal PIP</fullName>
                <color>#FFFFFF</color>
                <label>Informal PIP</label>
            </value>
            <value>
                <fullName>Informal Resolution</fullName>
                <color>#FFFFFF</color>
                <label>Informal Resolution</label>
            </value>
            <value>
                <fullName>Involuntary change to terms and conditions</fullName>
                <color>#FFFFFF</color>
                <label>Involuntary change to terms and conditions</label>
            </value>
            <value>
                <fullName>Letter of concern</fullName>
                <color>#FFFFFF</color>
                <label>Letter of concern</label>
            </value>
            <value>
                <fullName>Mediation</fullName>
                <color>#FFFFFF</color>
                <label>Mediation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>