Agentforce/force-app/main/default/objects/Case/fields/Owned_by_Queue__c.field-meta.xml
<CustomField>
    <fullName>Owned_by_Queue__c</fullName>
    <description>Ticked if the Case Owner is a Queue</description>
    <formula>IF(Owner:User.Username = &quot;&quot;,TRUE,FALSE)</formula>
    <label>Owned by Queue</label>
    <type>Checkbox</type>
</CustomField>