Agentforce/force-app/main/default/objects/Case/fields/Pause_Case_Manager_Auto_Reminder_Emails__c.field-meta.xml
<CustomField>
    <fullName>Pause_Case_Manager_Auto_Reminder_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick to stop automated chaser emails being sent to the Case Manager. This does not stop one-off, point in time, notifications to the Case Manager</inlineHelpText>
    <label>Pause Case Manager Auto Reminder Emails</label>
    <type>Checkbox</type>
</CustomField>